Local Database Sqlite with Room (ORM) done, login and registration done by room

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -57,7 +57,9 @@
         android:textColor="@color/colorAccent"
         android:text="Login Account"
         android:layout_marginRight="16dp"
-        android:padding="16dp"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"
         android:textSize="17sp"
         android:layout_gravity="right"/>
 
